# whisperx-app

./: .env.example  .gitignore  Dockerfile  FRONTEND.md  Konzept.md  README.md  docker-compose.yml  install.sh  pyproject.toml  setup.sh  uninstall.sh
.github/workflows/: test.yml
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Badge.tsx  Button.tsx  Layout.tsx  Logo.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Results.tsx  Upload.tsx
nginx/: Dockerfile  nginx.conf
scripts/: ollama-init.sh
tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_crowd.py  test_estimator.py  test_formatter.py  test_installer.py  test_model_manager.py  test_startup.py  test_updater.py
whisperx_app/: __init__.py  celery_app.py  cli.py  config.py  diarizer.py  estimator.py  formatter.py  gpu.py  installer.py  model_manager.py  startup.py  tasks.py  transcriber.py  updater.py
whisperx_app/api/: auth.py  db.py  dependencies.py  email_service.py  job_store.py  main.py  models.py  oauth.py  ollama_client.py  session_store.py  stream_processor.py  stream_store.py  text_utils.py  web_deps.py
whisperx_app/api/routes/: crowd.py  health.py  transcribe.py  web_auth.py  web_jobs.py
